--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "woertchen",
-  "homepage": "https://woertchen.sofacoach.de",
+  "homepage": "https://pennard.de",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "fix": "prettier --write src",
     "lint": "prettier --check src",
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
     "prepare": "husky install"
   },
