--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Wörtchen",
-  "name": "Wörtchen",
+  "short_name": "Pördl",
+  "name": "Pördl",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
