Add plausible self host

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CI= npm run build
 REACT_APP_GAME_NAME=Pördl
 REACT_APP_GAME_DESCRIPTION=Wordle auf deutsch
+REACT_APP_PLAUSIBLE_DOMAIN
+REACT_APP_PLAUSIBLE_HOST
