Move .env to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ CI= npm run build
 REACT_APP_GAME_NAME=Pördl
 REACT_APP_GAME_DESCRIPTION=Wordle auf deutsch
 REACT_APP_PLAUSIBLE_DOMAIN=pennard.de
-REACT_APP_PLAUSIBLE_HOST=plausible.analytics.lennardschwarz.me
+REACT_APP_PLAUSIBLE_HOST=https://plausible.analytics.lennardschwarz.me
